--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@lib/*": ["src/lib/*"],
+      "@components/*": ["components/*"]
     }
   }
 }
