--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,7 @@ fastapi==0.115.0
 uvicorn[standard]==0.30.6
 requests==2.32.3
 python-dotenv==1.0.1
-httpx==0.27.2
+numpy==1.26.4
+pandas==2.2.2
+geocoder==1.38.1
+websocket-client==1.8.0
