--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-fastapi==0.115.0
-uvicorn[standard]==0.30.6
+fastapi
+uvicorn[standard]
 requests==2.32.3
 python-dotenv==1.0.1
 numpy==1.26.4
@@ -11,6 +11,7 @@ python-multipart>=0.0.9
 psycopg[binary,pool]>=3.2
 cryptography>=42.0.0
 dhanhq
+
 
 
 
