--- a/.nixpacks/config.yaml
+++ b/.nixpacks/config.yaml
@@ -1,25 +1,18 @@
+# Force Railway to treat this project as Python + Node
+
+build:
+  commands:
+    - pip install -r requirements.txt || true
+    - playwright install chromium || true
+
+start:
+  command: uvicorn MultiBroker_Router:app --host 0.0.0.0 --port $PORT
+
+# Tell Railway what runtimes exist
 providers:
   python: true
   nodejs: true
 
+# Ensure Python is installed
 python:
   version: "3.12"
-  installPackages: true
-
-pip:
-  # These MUST match your requirements.txt
-  packages:
-    - fastapi
-    - uvicorn[standard]
-    - requests
-    - python-dotenv
-    - pydantic
-    - playwright
-
-# Ensure playwright browser installs during build
-build:
-  cmds:
-    - playwright install chromium
-
-start:
-  cmd: uvicorn MultiBroker_Router:app --host 0.0.0.0 --port $PORT
